--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php":              ">=5.6.0",
-        "ext-cassandra":    "1.3.2"
+        "ext-cassandra":    ">=1.3.2"
     },
     "autoload": {
         "psr-0": {
