--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
 		}
     ],
     "require": {
-        "php":              ">=5.6.0",
-        "ext-cassandra":    ">=1.3.2"
+        "php":              ">=5.6.0"
     },
     "autoload": {
         "psr-0": {
