--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         },
 		{
 		  "name": "Adrian Chwialkowski",
-		  "email": "adrian@molecules.pro"
+		  "email": "adrian@getsimpletools.com"
 		}
     ],
     "require": {
