--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
 		}
     ],
     "require": {
-        "php":              ">=5.6.0",
-        "simpletools/framework": ">=2.8.18"
+        "php":              ">=8.1",
+        "simpletools/framework": ">=3.0.*"
     },
     "autoload": {
         "psr-0": {
