--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
 		}
     ],
     "require": {
-        "php":              ">=8.1",
-        "simpletools/framework": ">=3.0.*"
+        "php":              ">=8",
+        "simpletools/framework": "3.0.*"
     },
     "autoload": {
         "psr-0": {
